...
    Column(
        modifier = Modifier
            .fillMaxSize()
            .background(MaterialTheme.colorScheme.secondary)
            .clickable { toggleImmersiveMode() }
            .padding(16.dp)
            .testTag("home_screen")
    ) {
        Row(
            verticalAlignment = Alignment.CenterVertically,
            modifier = Modifier.fillMaxWidth()
        ) {
            BookLogo(modifier = Modifier.testTag("restaurant_logo"))
...
fun Book(book: Book, viewModel: HomeScreenViewModel, onNavigateToContents: (Int) -> Unit){
    Button(onClick = {
        viewModel.updateLastAccessed(book.bookId!!)
        onNavigateToContents(book.bookId!!) },
        modifier = Modifier
            .fillMaxWidth()
            .testTag("download_button"),
        colors = ButtonDefaults.buttonColors(
            containerColor = MaterialTheme.colorScheme.primary
        )) {
            Row(
                verticalAlignment = Alignment.CenterVertically,
                modifier = Modifier.fillMaxWidth().testTag("book")
...
