<resources>
    <string name="app_name">Mobile-Dev-Project</string>
    <string name="tap_anywhere_to_exit_fullscreen">Tap anywhere to exit fullscreen</string>
    <string name="table_of_contents">Table of Contents</string>

    <string name="download_title">Download Book</string>
    <string name="download_url_label">Book URL</string>
    <string name="download_url">Enter Book URL</string>
    <string name="download_action">Download &amp; Add to Library</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <string name="search_title">Search</string>
    <string name="search_text">Search within the current book</string>
    <string name="no_results">No matches</string>
    <string name="results_fmt">%1$d results</string>
    <string name="search_btn">search</string>

    <string name="back_btn">←</string>
    <string name ="home">Home</string>
    <string name ="search">Search</string>
    <string name ="toc">Content</string>
    <string name ="download">Download</string>

    <string name="playing">State: Playing</string>
    <string name="paused">State: Paused</string>

    <string name="title">Welcome to Mobile Library</string>
    <string name="last_use_text">Last Used:</string>
    <string name="add_book">Add New Book</string>

    <string name="play">Play TTS</string>
    <string name="stop">Stop TTS</string>
    <string name="pause">Pause TTS</string>

    <!--- phase2 - book links-->
    <string-array name="book_urls">
        <!-- Moby Dick; Or, The Whale by Herman Melville -->
        <item>https://www.gutenberg.org/cache/epub/2701/pg2701-h.zip</item>
        <!-- Pride and Prejudice -->
        <item>https://www.gutenberg.org/cache/epub/1342/pg1342-h.zip</item>
        <!-- The Odyssey -->
        <item>https://www.gutenberg.org/cache/epub/1727/pg1727-h.zip</item>
    </string-array>
</resources>
